Murphy System/uploaded_files/outputs/workspace_output_1769703069_7572.txt
  File "<stdin>", line 66
    "functionCode": "const client = $node["Get Client"].json[0];\nconst packs = $node["Get Client Packs"].json;\nconst integrations = $node["Get Integrations"].json;\nconst teamMembers = $node["Get Team Members"].json;\n\nconst validationResults = {\n  valid: true,\n  warnings: [],\n  errors: [],\n  score: 100,\n  checks: []\n};\n\nconst requiredPacks = ["INTAKE_v1", "DOCS_v1", "TASKS_v1"];\nconst enabledPacks = packs.filter(p => p.enabled).map(p => p.pack_name);\nconst missingPacks = requiredPacks.filter(p => !enabledPacks.includes(p));\n\nif (missingPacks.length > 0) {\n  validationResults.warnings.push("Missing automation packs: " + missingPacks.join(", "));\n  validationResults.score -= 20;\n}\n\nvalidationResults.checks.push({\n  check: "required_packs",\n  status: missingPacks.length === 0 ? "pass" : "warning",\n  message: missingPacks.length === 0 ? "All required packs enabled" : "Missing packs: " + missingPacks.join(", ")\n});\n\nconst unencryptedIntegrations = integrations.filter(i => !i.is_encrypted && i.enabled);\nif (unencryptedIntegrations.length > 0) {\n  validationResults.warnings.push("Unencrypted integrations: " + unencryptedIntegrations.map(i => i.integration_name).join(", "));\n  validationResults.score -= 10;\n}\n\nvalidationResults.checks.push({\n  check: "encrypted_integrations",\n  status: unencryptedIntegrations.length === 0 ? "pass" : "warning",\n  message: unencryptedIntegrations.length === 0 ? "All integrations encrypted" : unencryptedIntegrations.length + " unencrypted integrations"\n});\n\nconst activeTeamMembers = teamMembers.filter(tm => tm.active);\nif (activeTeamMembers.length === 0) {\n  validationResults.errors.push("No active team members found");\n  validationResults.valid = false;\n  validationResults.score -= 30;\n}\n\nvalidationResults.checks.push({\n  check: "active_team_members",\n  status: activeTeamMembers.length > 0 ? "pass" : "error",\n  message: activeTeamMembers.length + " active team members"\n});\n\nconst hasEncryptionKey = true;\n\nvalidationResults.checks.push({\n  check: "encryption_key",\n  status: "pass",\n  message: "Encryption key available"\n});\n\nconst workflowsConfigured = true;\n\nvalidationResults.checks.push({\n  check: "workflows_configured",\n  status: workflowsConfigured ? "pass" : "warning",\n  message: workflowsConfigured ? "Workflows configured" : "Some workflows not configured"\n});\n\nvalidationResults.valid = validationResults.score >= 70 && validationResults.errors.length === 0;\n\nvalidationResults.summary = {\n  client_id: client.client_id,\n  client_name: client.client_name,\n  enabled_packs: enabledPacks,\n  total_integrations: integrations.length,\n  encrypted_integrations: integrations.filter(i => i.is_encrypted).length,\n  active_team_members: activeTeamMembers.length,\n  validation_score: validationResults.score,\n  overall_status: validationResults.valid ? "valid" : "invalid"\n};\n\nreturn { json: validationResults };"
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
